--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -197,6 +197,22 @@ body {
 	backdrop-filter: blur(3px);
 }
 
+.side-menu .close-button {
+	color: #fff;
+	text-align: center;
+	width: 15px;
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	cursor: pointer;
+	transition: all 0.5s;
+}
+
+.side-menu .close-button:hover {
+	color: #e92034;
+	text-shadow: 0px 0px 10px #e21717;
+}
+
 /* Page header style */
 
 header {
@@ -232,19 +248,19 @@ header {
 	max-height: 150px;
 }
 
-.parallax >use:nth-child(1) {
+.parallax > use:nth-child(1) {
 	animation-delay: -2s;
 	animation-duration: 16s;
 }
-.parallax >use:nth-child(2) {
+.parallax > use:nth-child(2) {
 	animation-delay: -3s;
 	animation-duration: 10s;
 }
-.parallax >use:nth-child(3) {
+.parallax > use:nth-child(3) {
 	animation-delay: -4s;
 	animation-duration: 13s;
 }
-.parallax >use:nth-child(4) {
+.parallax > use:nth-child(4) {
 	animation-delay: -5s;
 	animation-duration: 20s;
 }
@@ -284,7 +300,6 @@ header {
 	-o-border-radius: 15px;
 }
 
-
 /* dsicord message style */
 
 .card.dis-message {
@@ -293,7 +308,7 @@ header {
 	/* align-items: flex-end; */
 }
 
-.dis-message img  {
+.dis-message img {
 	width: 48px;
 	height: 48px;
 	object-fit: cover;
@@ -308,14 +323,12 @@ header {
 	border-radius: 10px;
 }
 
-
 /* footer */
 
 .footer-content {
-	background-color: #212529 ;
+	background-color: #212529;
 	border-radius: 35px 35px 0 0;
 }
-
 
 /* ScrollBar styles */
 
