--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -76,6 +76,7 @@ body {
 	font-size: 12px;
 	font-weight: bold;
 	border-radius: 0.75rem;
+	box-shadow: 0px 6px 12px #00000082;
 	-webkit-border-radius: 0.75rem;
 	-moz-border-radius: 0.75rem;
 	-ms-border-radius: 0.75rem;
