--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -87,6 +87,21 @@ body {
 	-o-border-radius: 0.75rem;
 }
 
+.progress-container {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 5px;
+	background: #b1b1b1;
+	transition: all .1s;
+}
+
+.progress-bar {
+	width: 0%;
+	height: 100%;
+	background-color: #ed1b36;
+}
+
 /* sideMenu styles */
 
 .navbar .menu-btn {
